Add styles, add downloadable resume, add links etc..

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,6 @@ body,
 * {
   padding: 0;
   margin: 0;
-  font-family: "Poppins", sans-serif;
+  font-family: "Raleway", sans-serif;
   scroll-behavior: smooth;
 }
