--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,4 +5,6 @@ body,
   margin: 0;
   font-family: "Raleway", sans-serif;
   scroll-behavior: smooth;
+  overflow: hidden;
+  box-sizing: border-box;
 }
